tests/machine/x/c/dataset_where_filter.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:49:3: error: unknown type name ‘list_peopleItem’; did you mean ‘list_PeopleItem’?
   49 |   list_peopleItem people = tmp1;
      |   ^~~~~~~~~~~~~~~
      |   list_PeopleItem
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:49:28: error: incompatible types when initializing type ‘int’ using type ‘list_PeopleItem’
   49 |   list_peopleItem people = tmp1;
      |                            ^~~~
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:50:3: error: unknown type name ‘list_adultsItem’; did you mean ‘list_AdultsItem’?
   50 |   list_adultsItem tmp2 = list_adultsItem_create(people.len);
      |   ^~~~~~~~~~~~~~~
      |   list_AdultsItem
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:50:26: warning: implicit declaration of function ‘list_adultsItem_create’; did you mean ‘list_AdultsItem_create’? [-Wimplicit-function-declaration]
   50 |   list_adultsItem tmp2 = list_adultsItem_create(people.len);
      |                          ^~~~~~~~~~~~~~~~~~~~~~
      |                          list_AdultsItem_create
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:50:55: error: request for member ‘len’ in something not a structure or union
   50 |   list_adultsItem tmp2 = list_adultsItem_create(people.len);
      |                                                       ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:52:35: error: request for member ‘len’ in something not a structure or union
   52 |   for (int tmp4 = 0; tmp4 < people.len; tmp4++) {
      |                                   ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:53:5: error: unknown type name ‘peopleItem’; did you mean ‘PeopleItem’?
   53 |     peopleItem person = people.data[tmp4];
      |     ^~~~~~~~~~
      |     PeopleItem
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:53:31: error: request for member ‘data’ in something not a structure or union
   53 |     peopleItem person = people.data[tmp4];
      |                               ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:54:17: error: request for member ‘age’ in something not a structure or union
   54 |     if (!(person.age >= 18)) {
      |                 ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:57:9: error: request for member ‘data’ in something not a structure or union
   57 |     tmp2.data[tmp3] = (AdultsItem){
      |         ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:58:23: error: request for member ‘name’ in something not a structure or union
   58 |         .name = person.name, .age = person.age, .is_senior = person.age >= 60};
      |                       ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:58:43: error: request for member ‘age’ in something not a structure or union
   58 |         .name = person.name, .age = person.age, .is_senior = person.age >= 60};
      |                                           ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:58:68: error: request for member ‘age’ in something not a structure or union
   58 |         .name = person.name, .age = person.age, .is_senior = person.age >= 60};
      |                                                                    ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:61:7: error: request for member ‘len’ in something not a structure or union
   61 |   tmp2.len = tmp3;
      |       ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:62:28: error: invalid initializer
   62 |   list_AdultsItem adults = tmp2;
      |                            ^~~~
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:65:5: error: unknown type name ‘adultsItem’; did you mean ‘AdultsItem’?
   65 |     adultsItem person = adults.data[tmp5];
      |     ^~~~~~~~~~
      |     AdultsItem
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:65:25: error: incompatible types when initializing type ‘int’ using type ‘AdultsItem’
   65 |     adultsItem person = adults.data[tmp5];
      |                         ^~~~~~
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:66:25: error: request for member ‘name’ in something not a structure or union
   66 |     printf("%s ", person.name);
      |                         ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:68:25: error: request for member ‘age’ in something not a structure or union
   68 |     printf("%d ", person.age);
      |                         ^
/workspace/mochi/tests/machine/x/c/dataset_where_filter.c:69:27: error: request for member ‘is_senior’ in something not a structure or union
   69 |     printf("%s\n", (person.is_senior ? " (senior)" : ""));
      |                           ^

   1: #include <stdio.h>
